--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,62 +1,71 @@
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 445px;
+  box-sizing: border-box;
+}
+
 .card__image {
   height: 413px;
   width: 100%;
   object-fit: cover;
   border-radius: 8px;
   display: block;
+  margin-bottom: 12px;
 }
+
 .card__content {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 .card__title {
+  font-family: "Poppins", Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   max-width: 335.7px;
+  margin: 0;
+  color: #212121;
 }
 .card__like-btn {
-  background-image: url(../images/heart.svg);
+  background-image: url(../images/heart_hover.svg);
   background-color: transparent;
-  opacity: 40%;
+  opacity: 0.4;
   width: 23px;
   height: 20px;
   border: none;
 }
 
 .card__like-btn:hover {
+  opacity: 1;
   cursor: pointer;
-  background-image: url(../images/heart_hover.svg);
 }
+
 @media screen and (max-width: 627px) {
   .card {
     max-width: 288px;
-    width: 100%;
-    height: 318px;
+    min-height: 318px;
     margin: 0 auto;
-    padding: 20px;
   }
   .card__image {
     height: 288px;
-    margin: 20px 0 12px;
+    width: 100%;
+    margin-bottom: 12px;
+    object-fit: cover;
+    border-radius: 8px;
   }
   .card__title {
-    margin-top: 12px;
     max-width: 223.2px;
+    font-size: 16px;
+    line-height: 16px;
   }
-
   .card__like-btn {
-    background-image: url(../images/heart.svg);
-    background-color: transparent;
-    opacity: 40%;
     width: 23px;
     height: 20px;
-    border: none;
-  }
-
-  .card__like-btn:hover {
-    cursor: pointer;
-    background-image: url(../images/heart_hover.svg);
   }
 }
