--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,32 +1,37 @@
 .footer {
   background-color: #fcf5e5;
-  padding: 0 20px;
+  padding: 60px 0;
   max-width: 1280px;
   margin: 0 auto;
   width: 100%;
   box-sizing: border-box;
 }
-.footer__content {
-  max-width: 1280px;
-  margin: 0 auto;
-}
+
 .footer__copyright {
   font-family: Poppins, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1;
   color: rgba(33, 33, 33, 0.7);
-  text-align: center;
   width: 100%;
+  text-align: center;
+  margin: 0 auto;
 }
 
-@media screen and (max-width: 627px;) {
-  .footer {
-    margin-top: 60px;
+@media screen and (max-width: 627px) {
+  footer {
+    padding: 0 0 40px;
   }
+
   .footer__copyright {
-    height: 16px;
-    width: 104px;
-    margin: 60px 108px;
+    font-family: "Poppins", Arial, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1; /* 100% */
+    letter-spacing: 0;
+    color: rgba(33, 33, 33, 0.7);
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
   }
 }
