--- a/blocks/header.css
+++ b/blocks/header.css
@@ -3,17 +3,18 @@
   padding: 10px 0;
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 46px;
 }
 
 .header__logo {
   width: 94px;
   height: 26px;
-  margin-bottom: 34px;
 }
 @media screen and (max-width: 627px) {
   .header {
     min-width: 320px;
-    width: 100%;
     min-height: 46px;
     padding: 10px 0;
     box-sizing: border-box;
