--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,5 +1,6 @@
-  .profile {
+.profile {
   display: flex;
+  flex-wrap: wrap;
   padding: 34px 0 20px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
@@ -9,18 +10,18 @@
   height: 190px;
   width: 190px;
   border-radius: 8px;
+  object-fit: cover;
 }
 
 .profile__column {
   display: flex;
   flex-direction: column;
-  margin: 0;
-  height: 190px;
-  max-width:
+  margin: 0 auto;
+  min-height: 190px;
 }
 
-.profile_name {
-  margin: 80px 0 12px;
+.profile__name {
+  margin: 0 0 12px;
   font-family: "Poppins", Arial, sans-serif;
   font-weight: 500;
   line-height: 1;
@@ -28,36 +29,34 @@
   font-size: 32px;
   max-width: 323px;
   text-overflow: ellipsis;
-    overflow: hidden;
-    display -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .profile__description {
   margin: 0;
-  font-family: "Poppins", Arial, sans-serif ;
+  font-family: "Poppins", Arial, sans-serif;
   font-weight: 500;
   line-height: 1;
   color: rgba(33, 33, 33, 0.7);
   font-size: 16px;
   text-overflow: ellipsis;
   overflow: hidden;
-  display -webkit-box;
+  display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__edit-btn {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin-top: 60px;
-  margin-bottom: 20px;
-  background-color: rgba(252, 245, 229, 1);
+  margin-top: auto;
+  background-color: #fcf5e5;
   border: none;
-  height:16px;
   width: 107.34px;
   border-radius: 90px;
   padding: 0;
@@ -66,6 +65,7 @@
   box-sizing: border-box;
   white-space: nowrap;
   gap: 0.33;
+  opacity: 0.7;
 }
 
 .profile__edit-btn-text {
@@ -73,17 +73,16 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1;
-  width: 84px;
-  height: 16px;
-  color: rgba(33, 33, 33, 0.7);
+  max-width: 84px;
+  color: #212121;
   margin-left: 10px;
   align-self: flex-start;
+  background-color: #fcf5e5;
 }
 
 .profile__edit-btn:hover {
-  background-color: rgba(252, 245, 229, 0.4);
+  opacity: 1;
   cursor: pointer;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .profile__edit-btn-icon {
@@ -111,89 +110,74 @@
   gap: 8px;
 }
 .profile__add-btn-text {
-padding: 18px 0 auto;
-align-self: center;
-white-space-collapse: nowrap;
+  padding: 18px 0 auto;
+  max-width: 73px;
+  align-self: center;
+  white-space-collapse: nowrap;
 }
 
 .profile__add-btn-icon {
-width: 12px;
-height: 12px;
-align-self: center;
+  width: 12px;
+  height: 12px;
+  align-self: center;
 }
 
 .profile__add-btn:hover {
-  background-color: rgba(33, 33, 33, 0.3);
+  opacity: 0.8;
   cursor: pointer;
 }
 @media screen and (max-width: 627px) {
   .profile {
-  display: flex;
-  flex-direction: column;
-  max-width: 288px;
-  width: 100%;
-  align-items: center;
-  text-align: center;
-  padding-top: 20px;
-  box-sizing: border-box;
-  margin: 0 auto;
-  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
+    flex-direction: column;
+    max-width: 288px;
+    align-items: center;
+    text-align: center;
+    padding-top: 20px;
+    margin-bottom: 20px;
   }
 
   .profile__avatar {
     height: 80px;
     width: 80px;
     margin: 0 0 12px;
-    }
-    .profile__name {
+  }
+  .profile__name {
     font-size: 20px;
     margin: 0 0 6px;
-    }
-    .profile__description {
+  }
+  .profile__description {
     margin: 0 0 32px;
-    font-size: 16px;
-    }
-    .profile__column {
-    margin: 0 0 20px;
-   }
+  }
+  .profile__column {
+    margin: 0 auto;
+    align-items: center;
+  }
 
   .profile__edit-btn {
     align-self: center;
-    margin: 32px 90.33px 20px 90.33px;
+    margin: 0 auto 20px;
     justify-content: center;
-    text-align: center;
   }
   .profile__edit-btn-text {
-    line-height: 1;
-    width: 84px;
-    height: 16px;
-    margin-left: 10px;
     align-self: center;
-    }
+  }
 
   .profile__add-btn {
-    display: flex;
     width: 100%;
-    height: 52px;
     padding: 18px 32px;
     align-self: center;
-    margin: 0 auto;
+    margin: 0 auto 20px;
     justify-content: center;
-    text-align: center;
-    box-sizing: border-box;
-    gap: 8px;
-    object-fit: cover;
     max-width: 288px;
-    margin-bottom: 20px;
-    }
+  }
 
-    .profile__add-btn-text {
-      margin: 0 8px 0 0;
-      width: 73px;
-      height: 16px;
-    }
+  .profile__add-btn-text {
+    align-self: center;
+    max-width: 73px;
+    white-space-collapse: nowrap;
+  }
 
-    .profile__add-btn-icon {
+  .profile__add-btn-icon {
     width: 16px;
     height: 16px;
   }
