--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -19,7 +19,7 @@
     padding: 0 0 20px;
   }
   .cards__list {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(auto-fit, 288px);
     gap: 20px;
   }
 }
