--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -16,7 +16,6 @@
 .profile__column {
   display: flex;
   flex-direction: column;
-  min-height: 190px;
 }
 
 .profile__name {
@@ -165,7 +164,7 @@
     width: 100%;
     padding: 18px 32px;
     align-self: center;
-    margin: 0 auto 20px;
+    margin: 0 auto;
     justify-content: center;
     max-width: 288px;
   }
