--- a/blocks/card.css
+++ b/blocks/card.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 445px;
   box-sizing: border-box;
 }
 
@@ -33,6 +32,9 @@
   color: #212121;
 }
 .card__like-btn {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
   background-image: url(../images/heart_hover.svg);
   background-color: transparent;
   opacity: 0.4;
@@ -49,8 +51,11 @@
 @media screen and (max-width: 627px) {
   .card {
     max-width: 288px;
-    height: 318px;
     margin: 0 auto;
+  }
+  .card__image {
+    height: 288px;
+    width: 288px;
   }
   .card__title {
     max-width: 223.2px;
@@ -58,7 +63,7 @@
     line-height: 16px;
   }
   .card__like-btn {
-    width: 23px;
-    height: 20px;
+    width: 20px;
+    height: 18px;
   }
 }
