--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,6 +1,8 @@
 .modal {
   box-sizing: border-box;
   visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease, visibility 0s 0.3s;
   background-color: #00000080;
   display: flex;
   justify-content: center;
@@ -11,9 +13,13 @@
   bottom: 0;
   left: 0;
 }
+
 .modal_is-opened {
   visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
 }
+
 .modal__container {
   max-width: 730px;
   width: 100%;
@@ -21,7 +27,14 @@
   position: relative;
   background-color: #fff;
   padding: 32px 50px;
+  transform: translateY(10px);
+  transition: transform 0.3s ease;
 }
+
+.modal_is-opened .modal__container {
+  transform: translateY(0);
+}
+
 .modal__close-btn {
   position: absolute;
   top: 32px;
@@ -32,15 +45,18 @@
   border: none;
   cursor: pointer;
 }
+
 .modal__close-icon {
   width: 40px;
   height: 40px;
   opacity: 0.4;
   transition: opacity 0.3s ease;
 }
+
 .modal__close-btn:hover .modal__close-icon {
   opacity: 1;
 }
+
 .modal__title {
   margin: 0 0 32px;
   font-family: "Poppins", Arial, sans-serif;
@@ -49,11 +65,13 @@
   line-height: 100%;
   color: #212121;
 }
+
 .modal__form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
+
 .modal__input {
   display: block;
   margin: 8px 0 0;
@@ -67,6 +85,7 @@
   border-radius: 8px;
   box-sizing: border-box;
 }
+
 .modal__label {
   margin: 0 0 32px;
   width: 100%;
@@ -76,9 +95,11 @@
   line-height: 110%;
   color: #212121b3;
 }
+
 .modal__input::placeholder {
   color: #2121214d;
 }
+
 .modal__submit-btn {
   width: 156px;
   height: 52px;
@@ -92,9 +113,11 @@
   font-size: 16px;
   font-family: "Poppins", Arial, sans-serif;
 }
+
 .modal__submit-btn:hover {
   opacity: 0.8;
 }
+
 @media screen and (max-width: 767px) {
   .modal {
     padding: 0 10px;
@@ -108,7 +131,6 @@
     font-size: 20px;
   }
   .modal__submit-btn {
-    max-width: none;
     width: 100%;
   }
   .modal__label {
