--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -111,7 +111,7 @@
   padding: 18px 0 auto;
   max-width: 73px;
   align-self: center;
-  white-space-collapse: nowrap;
+  white-space: nowrap;
 }
 
 .profile__add-btn-icon {
@@ -172,7 +172,7 @@
   .profile__add-btn-text {
     align-self: center;
     max-width: 73px;
-    white-space-collapse: nowrap;
+    white-space: nowrap;
   }
 
   .profile__add-btn-icon {
